// Framework System Database Schema
// Import this file into https://dbdiagram.io to visualize

Table frameworks {
  code string [pk, note: "Unique framework identifier (e.g., CHAIN_OF_THOUGHT)"]
  name string [not null]
  category string [not null, note: "Framework category (e.g., Analytical & Problem-Solving)"]
  description text [not null]
  complexity enum [not null, note: "low, medium, or high"]
  components json [not null, note: "Array of framework components"]
  best_for text [null]
  not_for text [null]
  is_active boolean [not null, default: true]
  display_order integer [not null, default: 0]
  created_at timestamp
  updated_at timestamp

  Indexes {
    category
    complexity
    is_active
  }
}

Table task_categories {
  code string [pk, note: "Unique task category identifier (e.g., DECISION)"]
  name string [not null]
  description text [not null]
  triggers json [not null, note: "Array of keyword triggers"]
  is_active boolean [not null, default: true]
  display_order integer [not null, default: 0]
  created_at timestamp
  updated_at timestamp

  Indexes {
    is_active
  }
}

Table cognitive_requirements {
  code string [pk, note: "Unique requirement identifier (e.g., EMPATHY)"]
  name string [not null]
  description text [not null]
  aligned_traits json [not null, note: "Array of aligned personality traits"]
  opposed_traits json [not null, note: "Array of opposed personality traits"]
  is_active boolean [not null, default: true]
  display_order integer [not null, default: 0]
  created_at timestamp
  updated_at timestamp

  Indexes {
    is_active
  }
}

Table framework_cognitive_requirements {
  id integer [pk, increment]
  framework_code string [not null, ref: > frameworks.code]
  cognitive_requirement_code string [not null, ref: > cognitive_requirements.code]
  support_level enum [not null, note: "primary or secondary"]
  created_at timestamp
  updated_at timestamp

  Indexes {
    framework_code
    cognitive_requirement_code
    (framework_code, cognitive_requirement_code) [unique]
  }

  Note: "Maps frameworks to their supported cognitive requirements with support levels"
}

Table task_category_cognitive_requirements {
  id integer [pk, increment]
  task_category_code string [not null, ref: > task_categories.code]
  cognitive_requirement_code string [not null, ref: > cognitive_requirements.code]
  requirement_level enum [not null, note: "primary or secondary"]
  created_at timestamp
  updated_at timestamp

  Indexes {
    task_category_code
    cognitive_requirement_code
    (task_category_code, cognitive_requirement_code) [unique]
  }

  Note: "Maps task categories to their required cognitive abilities"
}

Table framework_task_categories {
  id integer [pk, increment]
  framework_code string [not null, ref: > frameworks.code]
  task_category_code string [not null, ref: > task_categories.code]
  suitability enum [not null, note: "primary or secondary"]
  created_at timestamp
  updated_at timestamp

  Indexes {
    framework_code
    task_category_code
    (framework_code, task_category_code) [unique]
  }

  Note: "Maps frameworks to applicable task categories"
}
